fix: add gap to dapp account

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -104,6 +104,7 @@
   margin: 10px;
   display: flex;
   align-items: center;
+  gap: 6px;
 }
 
 .dapp-menu-external-links {
